Fix fixed slots invariant for slow arrays, bug 610592. r=brendan